# PreBackAmin

./: ActivityInfo_r21.java  ApplicationInfo_r21.java  README.md  build.gradle  local.properties  settings.gradle
.github/workflows/: build-zygisk.yml
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/xeasy/prebackamin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/com/xeasy/prebackanim/: MainActivity.java
app/src/main/java/com/xeasy/prebackanim/dao/: BlackListDao.java
app/src/main/java/com/xeasy/prebackanim/hook/: HookImpl.java
app/src/main/java/com/xeasy/prebackanim/provider/: ConfigProvider.java
app/src/main/java/com/xeasy/prebackanim/service/: QSTileService.java  UpdateService.java
app/src/main/res/drawable/: bg_floating_window.xml  btn_rounded_bg.xml  ic_notification.xml
app/src/main/res/layout/: app_bar_main.xml  floating_window.xml  fragment_gallery.xml  fragment_home.xml  fragment_slideshow.xml  item_child.xml  item_group.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: array.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xeasy/prebackamin/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
zygisk-preback/: README.md  build.sh
zygisk-preback/module/: module.prop
zygisk-preback/native/: CMakeLists.txt
zygisk-preback/native/src/: module.cpp
(+17 files in other folders)
